--- a/diapers copy.ipynb
+++ b/diapers copy.ipynb
@@ -19,6 +19,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6f5ab615",
+   "metadata": {},
+   "source": [
+    "## Imports"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "777d9dc2",
    "metadata": {},
    "source": [
@@ -3964,242 +3972,6 @@
     "Questions:\n",
     "- are ratios consistent from first half to second half?"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "d3c9b46f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th>size_cat</th>\n",
-       "      <th>N</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>2T</th>\n",
-       "      <th>3T</th>\n",
-       "      <th>4T</th>\n",
-       "      <th>ADULT</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>month</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>2025-01-01</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>21.0</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>34.0</td>\n",
-       "      <td>97.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-02-01</th>\n",
-       "      <td>8.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>19.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>56.0</td>\n",
-       "      <td>80.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-03-01</th>\n",
-       "      <td>4.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>86.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-04-01</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>111.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-05-01</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>64.0</td>\n",
-       "      <td>111.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-06-01</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>70.0</td>\n",
-       "      <td>88.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-07-01</th>\n",
-       "      <td>7.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-08-01</th>\n",
-       "      <td>6.0</td>\n",
-       "      <td>15.0</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>114.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-09-01</th>\n",
-       "      <td>5.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>46.0</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>85.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-10-01</th>\n",
-       "      <td>2.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>17.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>102.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2025-11-01</th>\n",
-       "      <td>0.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>23.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>95.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "size_cat      N     1     2     3     4     5      6   2T    3T    4T  ADULT\n",
-       "month                                                                       \n",
-       "2025-01-01  5.0   6.0  10.0  21.0  49.0  34.0   97.0  9.0  10.0  10.0    0.0\n",
-       "2025-02-01  8.0   6.0   9.0  19.0  44.0  56.0   80.0  3.0   5.0   8.0    0.0\n",
-       "2025-03-01  4.0   9.0   8.0  26.0  29.0  60.0   86.0  1.0   4.0   9.0    0.0\n",
-       "2025-04-01  5.0   5.0   8.0  24.0  42.0  53.0  111.0  4.0   4.0  10.0    0.0\n",
-       "2025-05-01  2.0  10.0  14.0  16.0  29.0  64.0  111.0  2.0  11.0   5.0    0.0\n",
-       "2025-06-01  6.0   9.0   8.0  22.0  32.0  70.0   88.0  4.0   7.0  11.0    0.0\n",
-       "2025-07-01  7.0  18.0  15.0  20.0  24.0  75.0   92.0  3.0  10.0  11.0    0.0\n",
-       "2025-08-01  6.0  15.0  12.0  22.0  32.0  59.0  114.0  4.0   8.0  13.0    0.0\n",
-       "2025-09-01  5.0   8.0  14.0  24.0  46.0  68.0   85.0  4.0  13.0  17.0    0.0\n",
-       "2025-10-01  2.0  14.0  17.0  29.0  40.0  71.0  102.0  4.0  10.0  10.0    0.0\n",
-       "2025-11-01  0.0   6.0  10.0  23.0  29.0  42.0   95.0  0.0   0.0   0.0    0.0"
-      ]
-     },
-     "execution_count": 571,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   }
  ],
  "metadata": {
