Added note for future work

--- a/diapers copy.ipynb
+++ b/diapers copy.ipynb
@@ -3972,6 +3972,14 @@
     "Questions:\n",
     "- are ratios consistent from first half to second half?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b17e72b6",
+   "metadata": {},
+   "source": [
+    "Confirm amount of data missing for sizes"
+   ]
   }
  ],
  "metadata": {
