Restarted kernel and reran notebooks

--- a/missing.ipynb
+++ b/missing.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 1,
    "id": "0b25ece0",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 2,
    "id": "c3fe3440",
    "metadata": {},
    "outputs": [],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 3,
    "id": "beba1501",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
        "4        NaN      2  September 2021  September  2021  14     Tue  "
       ]
      },
-     "execution_count": 186,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -252,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 4,
    "id": "58e24e17",
    "metadata": {},
    "outputs": [
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 188,
+   "execution_count": 5,
    "id": "db87497d",
    "metadata": {},
    "outputs": [],
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 6,
    "id": "8629eb0e",
    "metadata": {},
    "outputs": [],
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 7,
    "id": "c165494b",
    "metadata": {},
    "outputs": [],
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 8,
    "id": "baed3a66",
    "metadata": {},
    "outputs": [],
@@ -401,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 192,
+   "execution_count": 9,
    "id": "a73cb9aa",
    "metadata": {},
    "outputs": [
@@ -475,7 +475,7 @@
        "# packs          206       60382     0.341161"
       ]
      },
-     "execution_count": 192,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 193,
+   "execution_count": 10,
    "id": "fc279a54",
    "metadata": {},
    "outputs": [
@@ -517,7 +517,7 @@
        "       '2t', 'n', '7', 'adult', 'P', '0', nan], dtype=object)"
       ]
      },
-     "execution_count": 193,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -534,13 +534,12 @@
     "Some sizes have duplicates or are not valid.  \n",
     "Fixes: \n",
     "- 'n' and 'N' need to be combined\n",
-    "- 2t and 2T need to be combined for pullups (same with 3t/3T and 4t/4T)\n",
-    "- size 7 needs to be added to nan (we do not give out size 7)"
+    "- 2t and 2T need to be combined for pullups (same with 3t/3T and 4t/4T)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 11,
    "id": "83bd444f",
    "metadata": {},
    "outputs": [],
@@ -550,9 +549,6 @@
     "\n",
     "# make all letters in df[\"size\"] upper case\n",
     "df[\"size\"] = [x.upper() for x in df[\"size\"]]\n",
-    "\n",
-    "# replace size 7 with \"Not a Number\"\n",
-    "df[\"size\"] = df[\"size\"].replace(\"7\", \"NAN\")\n",
     "\n",
     "# Replace real NaN in size with a category name\n",
     "df['size_cat'] = df['size'].astype('object').fillna('NAN')"
@@ -568,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 12,
    "id": "0d17bd01",
    "metadata": {},
    "outputs": [],
@@ -604,7 +600,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 13,
    "id": "1316a487",
    "metadata": {},
    "outputs": [
@@ -641,59 +637,59 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>40207</th>\n",
-       "      <td>2025-01-02 13:05:00</td>\n",
-       "      <td>FV</td>\n",
-       "      <td>63114</td>\n",
-       "      <td>NAN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NAN</td>\n",
-       "      <td>2025-01</td>\n",
-       "      <td>2025-01-02</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>40921</th>\n",
-       "      <td>2025-01-27 15:20:08</td>\n",
-       "      <td>FV</td>\n",
-       "      <td>63136</td>\n",
-       "      <td>NAN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NAN</td>\n",
-       "      <td>2025-01</td>\n",
-       "      <td>2025-01-27</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41130</th>\n",
-       "      <td>2025-02-02 16:17:42</td>\n",
+       "      <th>48837</th>\n",
+       "      <td>2025-11-30 15:11:29</td>\n",
        "      <td>FV</td>\n",
        "      <td>63033</td>\n",
        "      <td>NAN</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NAN</td>\n",
-       "      <td>2025-02</td>\n",
-       "      <td>2025-02-02</td>\n",
+       "      <td>2025-11</td>\n",
+       "      <td>2025-11-30</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41253</th>\n",
-       "      <td>2025-02-04 15:40:52</td>\n",
-       "      <td>FV</td>\n",
-       "      <td>63031</td>\n",
+       "      <th>48853</th>\n",
+       "      <td>2025-11-26 13:03:30</td>\n",
+       "      <td>NB</td>\n",
+       "      <td>63115</td>\n",
        "      <td>NAN</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NAN</td>\n",
-       "      <td>2025-02</td>\n",
-       "      <td>2025-02-04</td>\n",
+       "      <td>2025-11</td>\n",
+       "      <td>2025-11-26</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>41769</th>\n",
-       "      <td>2025-02-25 11:21:05</td>\n",
+       "      <th>48861</th>\n",
+       "      <td>2025-11-26 10:59:16</td>\n",
        "      <td>FV</td>\n",
-       "      <td>63031</td>\n",
+       "      <td>63033</td>\n",
        "      <td>NAN</td>\n",
        "      <td>1.0</td>\n",
        "      <td>NAN</td>\n",
-       "      <td>2025-02</td>\n",
-       "      <td>2025-02-25</td>\n",
+       "      <td>2025-11</td>\n",
+       "      <td>2025-11-26</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48871</th>\n",
+       "      <td>2025-11-25 17:14:23</td>\n",
+       "      <td>FV</td>\n",
+       "      <td>63136</td>\n",
+       "      <td>NAN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NAN</td>\n",
+       "      <td>2025-11</td>\n",
+       "      <td>2025-11-25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>48872</th>\n",
+       "      <td>2025-11-25 17:06:33</td>\n",
+       "      <td>NB</td>\n",
+       "      <td>63118</td>\n",
+       "      <td>NAN</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>NAN</td>\n",
+       "      <td>2025-11</td>\n",
+       "      <td>2025-11-25</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -701,21 +697,21 @@
       ],
       "text/plain": [
        "                timestamp branch zip code size  # packs size_cat    month  \\\n",
-       "40207 2025-01-02 13:05:00     FV    63114  NAN      1.0      NAN  2025-01   \n",
-       "40921 2025-01-27 15:20:08     FV    63136  NAN      1.0      NAN  2025-01   \n",
-       "41130 2025-02-02 16:17:42     FV    63033  NAN      1.0      NAN  2025-02   \n",
-       "41253 2025-02-04 15:40:52     FV    63031  NAN      1.0      NAN  2025-02   \n",
-       "41769 2025-02-25 11:21:05     FV    63031  NAN      1.0      NAN  2025-02   \n",
+       "48837 2025-11-30 15:11:29     FV    63033  NAN      1.0      NAN  2025-11   \n",
+       "48853 2025-11-26 13:03:30     NB    63115  NAN      1.0      NAN  2025-11   \n",
+       "48861 2025-11-26 10:59:16     FV    63033  NAN      1.0      NAN  2025-11   \n",
+       "48871 2025-11-25 17:14:23     FV    63136  NAN      1.0      NAN  2025-11   \n",
+       "48872 2025-11-25 17:06:33     NB    63118  NAN      1.0      NAN  2025-11   \n",
        "\n",
        "             date  \n",
-       "40207  2025-01-02  \n",
-       "40921  2025-01-27  \n",
-       "41130  2025-02-02  \n",
-       "41253  2025-02-04  \n",
-       "41769  2025-02-25  "
+       "48837  2025-11-30  \n",
+       "48853  2025-11-26  \n",
+       "48861  2025-11-26  \n",
+       "48871  2025-11-25  \n",
+       "48872  2025-11-25  "
       ]
      },
-     "execution_count": 196,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -728,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 14,
    "id": "f464ad23",
    "metadata": {},
    "outputs": [
@@ -752,152 +748,55 @@
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
-       "      <th>month</th>\n",
-       "      <th>2025-01</th>\n",
-       "      <th>2025-02</th>\n",
-       "      <th>2025-03</th>\n",
-       "      <th>2025-04</th>\n",
-       "      <th>2025-05</th>\n",
-       "      <th>2025-06</th>\n",
-       "      <th>2025-07</th>\n",
-       "      <th>2025-08</th>\n",
-       "      <th>2025-09</th>\n",
-       "      <th>2025-10</th>\n",
-       "      <th>2025-11</th>\n",
+       "      <th></th>\n",
        "      <th>total</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>branch</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>FV</th>\n",
-       "      <td>3.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>63.0</td>\n",
-       "      <td>208.0</td>\n",
+       "      <td>52</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>GG</th>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>6.0</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>34.0</td>\n",
+       "      <td>34</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>LC</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>35.0</td>\n",
+       "      <td>35</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>NB</th>\n",
-       "      <td>43.0</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>60.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>40.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>33.0</td>\n",
-       "      <td>32.0</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>407.0</td>\n",
+       "      <td>407</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>PV</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>13.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>39.0</td>\n",
+       "      <td>39</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>WR</th>\n",
-       "      <td>19.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>14.0</td>\n",
-       "      <td>28.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>45.0</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>310.0</td>\n",
+       "      <td>309</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "month   2025-01  2025-02  2025-03  2025-04  2025-05  2025-06  2025-07  \\\n",
-       "branch                                                                  \n",
-       "FV          3.0      6.0      5.0      4.0      4.0      1.0      8.0   \n",
-       "GG          1.0      2.0      1.0      NaN      3.0      2.0      1.0   \n",
-       "LC          NaN      NaN      1.0      NaN      NaN      NaN      1.0   \n",
-       "NB         43.0     36.0     60.0     22.0     29.0     40.0     26.0   \n",
-       "PV          NaN      NaN      NaN      NaN      NaN      NaN      NaN   \n",
-       "WR         19.0     29.0     14.0     28.0     26.0     18.0     22.0   \n",
-       "\n",
-       "month   2025-08  2025-09  2025-10  2025-11  total  \n",
-       "branch                                             \n",
-       "FV         22.0     44.0     48.0     63.0  208.0  \n",
-       "GG          6.0      3.0      4.0     11.0   34.0  \n",
-       "LC          NaN      NaN     11.0     22.0   35.0  \n",
-       "NB         33.0     32.0     42.0     44.0  407.0  \n",
-       "PV          4.0      NaN     13.0     22.0   39.0  \n",
-       "WR         29.0     27.0     45.0     53.0  310.0  "
+       "        total\n",
+       "branch       \n",
+       "FV         52\n",
+       "GG         34\n",
+       "LC         35\n",
+       "NB        407\n",
+       "PV         39\n",
+       "WR        309"
       ]
      },
-     "execution_count": 197,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -905,7 +804,8 @@
    "source": [
     "pivot = pd.pivot_table(df_nan_filtered, index='branch', values='# packs', aggfunc='sum',columns='month')\n",
     "pivot['total'] = pivot.sum(axis=1)\n",
-    "pivot"
+    "pivot['total'] = [math.ceil(x) for x in pivot['total']]\n",
+    "pivot['total'].to_frame()"
    ]
   },
   {
@@ -918,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 15,
    "id": "04ef1695",
    "metadata": {},
    "outputs": [
@@ -1029,7 +929,7 @@
        "49026  2025-11-19  "
       ]
      },
-     "execution_count": 198,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1042,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 16,
    "id": "7c080712",
    "metadata": {},
    "outputs": [
@@ -1211,7 +1111,7 @@
        "WR          1.0      1.0      NaN      4.0    6.0  "
       ]
      },
-     "execution_count": 199,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
