Added averages for all sizes

--- a/diapers.ipynb
+++ b/diapers.ipynb
@@ -2329,59 +2329,76 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Avg. Per Month</th>\n",
-       "      <th>Proportion of Total</th>\n",
+       "      <th>0</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>Shelf</th>\n",
-       "      <th></th>\n",
+       "      <th>size_cat</th>\n",
        "      <th></th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
+       "      <th>N</th>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>11</td>\n",
-       "      <td>0.04</td>\n",
+       "      <td>11.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>13</td>\n",
-       "      <td>0.05</td>\n",
+       "      <td>13.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>25</td>\n",
-       "      <td>0.10</td>\n",
+       "      <td>25.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>40</td>\n",
-       "      <td>0.15</td>\n",
+       "      <td>40.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>66</td>\n",
-       "      <td>0.25</td>\n",
+       "      <td>66.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>108</td>\n",
-       "      <td>0.41</td>\n",
+       "      <td>108.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2T</th>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3T</th>\n",
+       "      <td>9.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4T</th>\n",
+       "      <td>11.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ADULT</th>\n",
+       "      <td>0.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       Avg. Per Month  Proportion of Total\n",
-       "Shelf                                     \n",
-       "1                  11                 0.04\n",
-       "2                  13                 0.05\n",
-       "3                  25                 0.10\n",
-       "4                  40                 0.15\n",
-       "5                  66                 0.25\n",
-       "6                 108                 0.41"
+       "              0\n",
+       "size_cat       \n",
+       "N           5.0\n",
+       "1          11.0\n",
+       "2          13.0\n",
+       "3          25.0\n",
+       "4          40.0\n",
+       "5          66.0\n",
+       "6         108.0\n",
+       "2T          4.0\n",
+       "3T          9.0\n",
+       "4T         11.0\n",
+       "ADULT       0.0"
       ]
      },
      "execution_count": 45,
@@ -2390,24 +2407,8 @@
     }
    ],
    "source": [
-    "# total diapers distributed each month\n",
-    "monthly_totals = df_total.loc[:,\"1\":\"6\"].sum(axis=1)\n",
-    "\n",
-    "# average of sizes 1-6 distributed monthly\n",
-    "averages = pd.Series([math.ceil(x) for x in df_total.loc[:,\"1\":\"6\"].mean()])\n",
-    "\n",
-    "# proportions\n",
-    "props = round(averages / averages.sum(), 2)\n",
-    "\n",
-    "# creet\n",
-    "month_avg = pd.DataFrame({\n",
-    "    \"Shelf\": storage.index,\n",
-    "    \"Avg. Per Month\": averages,\n",
-    "    \"Proportion of Total\": props\n",
-    "})\n",
-    "month_avg = month_avg.set_index(\"Shelf\")\n",
-    "\n",
-    "month_avg"
+    "df_total\n",
+    "np.ceil(df_total.mean()).to_frame()"
    ]
   },
   {
@@ -2425,117 +2426,15 @@
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Current Storage</th>\n",
-       "      <th>Current Proportion</th>\n",
-       "      <th>Avg. Per Month</th>\n",
-       "      <th>Avg. Proportion</th>\n",
-       "      <th>Rec. New Storage</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>Shelf</th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>63</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>11</td>\n",
-       "      <td>0.04</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>63</td>\n",
-       "      <td>0.14</td>\n",
-       "      <td>13</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>90</td>\n",
-       "      <td>0.20</td>\n",
-       "      <td>25</td>\n",
-       "      <td>0.10</td>\n",
-       "      <td>46</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>60</td>\n",
-       "      <td>0.13</td>\n",
-       "      <td>40</td>\n",
-       "      <td>0.15</td>\n",
-       "      <td>68</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>60</td>\n",
-       "      <td>0.13</td>\n",
-       "      <td>66</td>\n",
-       "      <td>0.25</td>\n",
-       "      <td>114</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>120</td>\n",
-       "      <td>0.26</td>\n",
-       "      <td>108</td>\n",
-       "      <td>0.41</td>\n",
-       "      <td>187</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "       Current Storage  Current Proportion  Avg. Per Month  Avg. Proportion  \\\n",
-       "Shelf                                                                         \n",
-       "1                   63                0.14              11             0.04   \n",
-       "2                   63                0.14              13             0.05   \n",
-       "3                   90                0.20              25             0.10   \n",
-       "4                   60                0.13              40             0.15   \n",
-       "5                   60                0.13              66             0.25   \n",
-       "6                  120                0.26             108             0.41   \n",
-       "\n",
-       "       Rec. New Storage  \n",
-       "Shelf                    \n",
-       "1                    18  \n",
-       "2                    23  \n",
-       "3                    46  \n",
-       "4                    68  \n",
-       "5                   114  \n",
-       "6                   187  "
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'month_avg' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[46]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m df_combined = pd.concat([storage, \u001b[43mmonth_avg\u001b[49m], axis=\u001b[32m1\u001b[39m)\n\u001b[32m      3\u001b[39m df_combined[\u001b[33m\"\u001b[39m\u001b[33mShelf\u001b[39m\u001b[33m\"\u001b[39m] = month_avg.index\n\u001b[32m      4\u001b[39m df_combined = df_combined.set_index(\u001b[33m\"\u001b[39m\u001b[33mShelf\u001b[39m\u001b[33m\"\u001b[39m)\n",
+      "\u001b[31mNameError\u001b[39m: name 'month_avg' is not defined"
+     ]
     }
    ],
    "source": [
@@ -2562,7 +2461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "afd5f099",
    "metadata": {},
    "outputs": [
@@ -2658,7 +2557,7 @@
        "6                    0.26              120             0.41               187"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2678,7 +2577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": null,
    "id": "da0dcf0f",
    "metadata": {},
    "outputs": [
@@ -2774,7 +2673,7 @@
        "6                  120               187      67      0.56"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2797,7 +2696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "badcc234",
    "metadata": {},
    "outputs": [
@@ -2893,7 +2792,7 @@
        "6          120             1.1          187         1.7"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2933,7 +2832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": null,
    "id": "2fbc725e",
    "metadata": {},
    "outputs": [],
@@ -2954,7 +2853,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": null,
    "id": "2cde0c4d",
    "metadata": {},
    "outputs": [
@@ -2988,7 +2887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "6afdd636",
    "metadata": {},
    "outputs": [
@@ -3076,7 +2975,7 @@
        "6              187        114.0        73.0"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3099,7 +2998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": null,
    "id": "02cd2077",
    "metadata": {},
    "outputs": [
@@ -3121,7 +3020,7 @@
        "Name: 1, dtype: float64"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3140,7 +3039,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "id": "7d22b807",
    "metadata": {},
    "outputs": [
@@ -3253,7 +3152,7 @@
        "6                   187  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3280,7 +3179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "2aa339ad",
    "metadata": {},
    "outputs": [],
@@ -3290,7 +3189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "id": "0bcf1916",
    "metadata": {},
    "outputs": [],
@@ -3300,7 +3199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "id": "05d7de0f",
    "metadata": {},
    "outputs": [],
@@ -3319,7 +3218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "6153985b",
    "metadata": {},
    "outputs": [],
@@ -3332,7 +3231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "id": "87128eb7",
    "metadata": {},
    "outputs": [],
@@ -3343,7 +3242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "id": "75f6093b",
    "metadata": {},
    "outputs": [],
@@ -3368,7 +3267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "484f3531",
    "metadata": {},
    "outputs": [
@@ -4462,7 +4361,7 @@
        "               4                0.0  0.0   3.0   33.0        0.13  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4473,7 +4372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "b223db1e",
    "metadata": {},
    "outputs": [],
@@ -4486,7 +4385,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": null,
    "id": "1a1e9134",
    "metadata": {},
    "outputs": [
@@ -4566,7 +4465,7 @@
        "4  2025          3           1   0.55"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 142,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4584,7 +4483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "009c9fd7",
    "metadata": {},
    "outputs": [
@@ -4640,7 +4539,7 @@
        "2           0.415455  0.073806"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4667,7 +4566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": null,
    "id": "64441ab5",
    "metadata": {},
    "outputs": [],
@@ -4682,7 +4581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "16a8b511",
    "metadata": {},
    "outputs": [],
@@ -4692,7 +4591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "da2b74f6",
    "metadata": {},
    "outputs": [],
@@ -4707,7 +4606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": null,
    "id": "1e9928d4",
    "metadata": {},
    "outputs": [],
@@ -4717,7 +4616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": null,
    "id": "f3c8a87a",
    "metadata": {},
    "outputs": [
@@ -4944,7 +4843,7 @@
        "2025-11-01  5.0  10.0  11.0  22.0  36.0  59.0   96.0  3.0   7.0   9.0    0.0"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 148,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4955,7 +4854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "f9d768e7",
    "metadata": {},
    "outputs": [
@@ -5182,7 +5081,7 @@
        "2025-11-01  5.0  2.0 -2.0 -7.0   0.0   6.0 -23.0  3.0  7.0  9.0    0.0"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 149,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5230,6 +5129,148 @@
     "Questions\n",
     "- how long after placing a diaper order does it arrive?`"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6a17e6fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>branch</th>\n",
+       "      <th>zip code</th>\n",
+       "      <th>size</th>\n",
+       "      <th># packs</th>\n",
+       "      <th>size_cat</th>\n",
+       "      <th>month</th>\n",
+       "      <th>date</th>\n",
+       "      <th>week_of_month</th>\n",
+       "      <th>year</th>\n",
+       "      <th>month_num</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>WR</td>\n",
+       "      <td>63125</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>2021-09</td>\n",
+       "      <td>2021-09-03</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>WR</td>\n",
+       "      <td>63123</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2021-09</td>\n",
+       "      <td>2021-09-03</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>WR</td>\n",
+       "      <td>63125</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2021-09</td>\n",
+       "      <td>2021-09-07</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>WR</td>\n",
+       "      <td>63118</td>\n",
+       "      <td>N</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>2021-09</td>\n",
+       "      <td>2021-09-07</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>WR</td>\n",
+       "      <td>63118</td>\n",
+       "      <td>N</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>N</td>\n",
+       "      <td>2021-09</td>\n",
+       "      <td>2021-09-07</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  branch zip code size  # packs size_cat    month       date  week_of_month  \\\n",
+       "0     WR    63125    6      2.0        6  2021-09 2021-09-03              1   \n",
+       "1     WR    63123    3      2.0        3  2021-09 2021-09-03              1   \n",
+       "2     WR    63125    4      2.0        4  2021-09 2021-09-07              1   \n",
+       "3     WR    63118    N      6.0        N  2021-09 2021-09-07              1   \n",
+       "4     WR    63118    N      3.0        N  2021-09 2021-09-07              1   \n",
+       "\n",
+       "   year  month_num  \n",
+       "0  2021          9  \n",
+       "1  2021          9  \n",
+       "2  2021          9  \n",
+       "3  2021          9  \n",
+       "4  2021          9  "
+      ]
+     },
+     "execution_count": 151,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7c9d491b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
